index.css
body {
  font-family: 'Arimo', sans-serif;
}

nav {
  display: block;
  width: 100%;
  height: 70px;
  background-color: #fff;
}

a { 
  color: inherit; 
  text-decoration: none;
} 

.logo {
  float: left;
  display: inline;
  padding: 5px 50px 10px 50px;
}

nav ul {
  display: inline;
}

nav li {
  list-style: none;
  line-height: 80px;
}

#nav-mobile {
  display: flex;
  flex: 1;
  width: 100%;
  flex-direction: column;
  justify-content: flex-start;
  align-content: flex-start;
  line-height: 20px;
  float: left;
  background-color: #fff;
  z-index: 100;
}

.button-collapse {
  display: none;
}

.nav-full li {
  margin: 0px 100px;
}


.nav-left {
  margin-right: 20px;
  color: #000;
  float: left;
}

.nav-left:hover {
  color: #FF8200;
}

/*.nav-sublink {
  float: none;
  display: list-item;
  list-style: none;
  position: relative;
}*/

.nav-right {
  float: right;
}

.nav-pill {
  margin: 10px;
  border: 1px solid black;
  border-radius: 8px;
  padding: 7px;
  color: #000;
}

.nav-pill:hover {
   border: 1px solid #64CCC9;
  color: #64CCC9;
}

.purple {
  color: #9B26B6;
}

.blue {
  color: #64CCC9;
}

.orange {
  color: #FF8200;
}

.icon {
  padding: 20px 10px;
}

/*nav ul ul {
  display: none;
  position: absolute;
  margin-top: 60px;
  line-height: 30px;
  left: 250px;
  background-color: #fff;
  border-radius: 20px;
  padding-right: 30px;
}

nav ul li:hover > ul {
  display: inherit;
}*/

/* HOME */

.home-bk {
  width: 100%;
}

.home-sec1 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  /*align-content: center;*/
  height: 500px;
  overflow: hidden;
}

.home-nav-pill {
  margin: 20px;
  border: 1px solid #fff;
  border-radius: 8px;
  font-size: 0.5em;
  padding: 7px;
  color: #fff;
}

.home-nav-pill:hover {
  border: 1px solid #FF8200;
  color: #FF8200;
}

.flex-col {
  position: absolute;
  top: 400px;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
  font-size: 2.5em;
  color: #fff;
}

hr {
  display: inline-block;
  width: 200px;
}

.line-purple {
  border: 2px solid #9B26B6;
}

.line-blue {
  border: 2px solid #64CCC9;
}

.line-orange {
  border: 2px solid #FF8200;
}

.flex-col span {
  padding: 5px;
  text-shadow: 2px 2px 8px #333333;
}

#video-background {
  min-width: 100%; 
  min-height: 100%;
  width: 100%; 
  /*height: auto;*/
  z-index: -100000;
}

.home-sec2 {
  height: 500px;
  position: relative;
  margin-top: 80px;
  margin-bottom: 20px;
  margin-left: 100px;
  margin-right: 100px;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.card {
  height: 90%;
  width: 30%;
  padding: 20px;
  margin: 20px;
  border: 5px solid #dddbd9;
  border-radius: 8px;
  text-align: center;
  font-size: 1.2em;
  opacity: 0.6;
}

.card img {
  width: 100%;
}

.card.card-active {
  height: 100%;
  width: 40%;
  opacity: 1;
  border: 5px solid #ff9933;
}

.home-learnmore {
  color: #47e8e5;
}

.home-sec3 {
}

.home-sec4 {
  height: 600px;
  font-size: 1.5em;
  display: flex;
  flex-direction: column;
  justify-content: center; 
  align-items: center;
}

.home-img4 {
  width: 100%;
  height: auto;
  overflow: hidden;
  /*background-image: url(modules/assets/img03.jpg);
  background-size: cover;*/
}

.home-sec3 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  align-content: center;
  margin-bottom: 150px;
  margin-top: 100px;
  font-size: 1.5em;
  background-color: #eff0f2;
}

.gallery-container {
  width: 100%;
}

.gallery-img {
  display: block;
  margin: auto;
  width: 60%;
  height: auto;
  padding: 30px 0px;
}

.bullets-container {
  height: 150px;
  text-align: center;
}

.bullet {
  font-size: 40px;
  padding: 20px;
  color: #dddbd9;
  align-items: center;
  cursor: pointer;
}

.bullet.bullet-active {
  color: #ff9933;
}

.footer-social {
  height: 300px;
  display: flex;
  justify-content: center;
  align-items: center;
  /*background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);*/
}

footer i {
  padding: 10px;
}

/*ABOUT*/

.text-container {
  width: 70%;
  margin: auto;
  margin-top: 100px;
}

.text-container h1 {
  text-align: center;
}

.progress {
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 150px;
  justify-content: center;
  border: 1px solid black;
  font-size: 1.5em;
  border-radius: 15px;

}

.progress div {
  display: flex;
  width: 25%;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 5px;
}


/*IN CLASS*/

.container-topMargin {
  margin-top: 150px;
/*  padding-left: 150px;
  padding-right: 150px;*/
  background: rgb(170, 196, 223); /* For browsers that do not support gradients */
  background: -webkit-linear-gradient(rgba(255,0,0,0), rgb(234, 237, 242), rgb(234, 237, 242), rgb(245, 242, 239)); /* For Safari 5.1 to 6.0 */
  background: -o-linear-gradient(rgba(255,0,0,0), rgb(234, 237, 242), rgb(234, 237, 242), rgb(245, 242, 239)); /* For Opera 11.1 to 12.0 */
  background: -moz-linear-gradient(rgba(255,0,0,0), rgb(234, 237, 242), rgb(234, 237, 242), rgb(245, 242, 239)); /* For Firefox 3.6 to 15 */
  background: linear-gradient(rgba(255,0,0,0), rgb(234, 237, 242), rgb(234, 237, 242), rgb(245, 242, 239)); /* Standard syntax */

}

.threerow-container {
  /*width: 100%;*/
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  margin: auto;
  width: 1200px;
}

.three-a-row {
  position: relative;
  height: 250px;
  margin: 30px;
  width: 33.33%;
  background-color: rgba(0,0,0,0.6);
  font-size: 2em;
  color: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
/*  z-index: -1;*/
}

.empty-section {
  height: 300px;
}

/*DONATE*/
.donate-container {
  margin: auto;
  margin-top: 50px;
  width: 100%;
  height: 1800px;
  position: relative;
  border-radius: 5px;
  background: #f5f2ef; /* For browsers that do not support gradients */
  background: -webkit-linear-gradient(rgba(255,0,0,0), rgb(245, 242, 239), rgb(245, 242, 239), rgb(245, 242, 239)); /* For Safari 5.1 to 6.0 */
  background: -o-linear-gradient(rgba(255,0,0,0), rgb(245, 242, 239), rgb(245, 242, 239), rgb(245, 242, 239)); /* For Opera 11.1 to 12.0 */
  background: -moz-linear-gradient(rgba(255,0,0,0), rgb(245, 242, 239), rgb(245, 242, 239), rgb(245, 242, 239)); /* For Firefox 3.6 to 15 */
  background: linear-gradient(rgba(255,0,0,0), rgb(245, 242, 239), rgb(245, 242, 239), rgb(245, 242, 239)); /* Standard syntax */
}

.donate-container h2{
  padding-top: 80px;
  text-align: center; 
}

.donate-container p {
  padding-bottom: 15px;
 text-align: center;  
}

.donate-container img {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: auto;
  margin-bottom: 0;
}

.donate-box {
  font-size: 2em;
  margin: auto;
  margin-bottom: 30px;
  height: 400px;
  background-color: #fff;
  width: 500px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  padding: 10px 10px;
  position: relative;
}

.donate-header {
  background-color: #64CCC9;
  width: 100%;
  padding: 20px 0px;
  text-align: center;
  position: absolute;
  top: 0;
  left: 0;
}

.donate-box input {
  width: 100%;
  padding: 10px;
  font-size: 1.5em;
  margin-top: 100px;
}

.donate-box span {
  display: inline;
  border: 1px solid gray;
  border-radius: 5px;
  padding: 5px;
  width: 150px;
  margin: 15px;
  font-size: 0.8em;
}
.donate-box center {
  margin: 30px;
}

.donate-container button {
  margin: auto;
  text-align: center;
  border-radius: 5px;
  padding: 5px;
  width: 250px;
  font-size: 1em;
  background-color: #9B26B6;
  color: #fff;

}

.donate-selected {
  background-color: #efefef;
}

@media (max-width : 1000px) {

  .nav-full {
    display: none;
  }

  .button-collapse {
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 40px;
    margin-top: 10px;
    margin-left: 10px;
  }

  nav ul li {
  padding-top: 10px;
  padding-left: 10px;
  clear: both;
  line-height: 30px;
  }

  .flex-col {
    display: none;
  }

}

@media (max-width: 650px) {
  .home-sec2 {
    height: auto;
    width: 100%;
    margin-top: 80px;
    margin-bottom: 20px;
    margin-left: 50px;
    margin-right: 50px;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .card {
  height: 500px;
  width: 90%;
  padding: 20px;
  margin: 20px;
  border: 5px solid #dddbd9;
  border-radius: 8px;
  text-align: center;
  font-size: 1.2em;
  }

  .card img {
    width: 100%;
  }

  .card.card-active {
    height: 500px;
    width: 90%;
    border: 5px solid #ff9933;
  }

  .gallery-img {
  padding-left: 0px;
  padding-right: 0px;
}
  .three-a-row {
    width: 100%;
  }

  .threerow-container {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

}

